# z_temp-sense

./: .clangd  .gitignore  CMakeLists.txt  Notes.txt  prj.conf
boards/st/ATS_STM32/: ATS_STM32.dts  Kconfig.ATS_STM32  Kconfig.defconfig  board.cmake  board.yml
boards/st/vcu_stm32/: board.yml  vcu_stm32.dts
docs/: Software_Architecture.md  pinmapping.md
dts/bindings/adc/: adi,ad7708.yaml
include/: APPS.h  adc.h  can.h  diagnostic.h  dti_decoders.h  globals.h  gpio.h  hardware.h  heap_init.h  periodic_task.h  system.h  vehicle_state.h  zephyr-common.h
include/can_decoders/: logger_encoders.h
include/threads/: APPS.h  Logger.h
src/: APPS.cpp  CanInitializer.cpp  adc.cpp  can.cpp  diagnostics.cpp  dti_decoders.cpp  gpio.cpp  hardware.cpp  heap_init.cpp  main.c  main.cpp  system.cpp  vehicle_state.cpp
src/threads/: APPS.cpp  Logger.cpp  system.cpp
